chore: add main dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,9 @@ keywords =
 zip_safe = True
 install_requires =
     depinfo
+    httpx
+    pydantic
+    python-dotenv
 python_requires = >=3.6
 tests_require =
     tox
