--- a/tox.ini
+++ b/tox.ini
@@ -110,7 +110,10 @@ lines_after_imports = 2
 known_first_party = structurizr
 known_third_party =
     depinfo
+    httpx
+    pydantic
     pytest
+    python-dotenv
     setuptools
     versioneer
 
