fix: add missing pytest-mock dependency

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ python =
 deps =
     pytest
     pytest-cov
+    pytest-mock
     pytest-raises
 commands =
     pytest --cov=structurizr --cov-report=term {posargs}
