--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,8 @@ deps =
     pytest-cov
     pytest-mock
     pytest-raises
+passenv =
+    STRUCTURIZR_*
 commands =
     pytest --cov=structurizr --cov-report=term {posargs}
 
