--- a/setup.cfg
+++ b/setup.cfg
@@ -8,15 +8,15 @@ author_email = midnighter@posteo.net
 classifiers =
     Development Status :: 2 - Pre-Alpha
     Environment :: Web Environment
+    Intended Audience :: Developers
     Intended Audience :: Information Technology
     License :: OSI Approved :: Apache Software License
     Natural Language :: English
-    Operating System :: MacOS :: MacOS X
-    Operating System :: Microsoft :: Windows :: Windows 10
-    Operating System :: POSIX
+    Operating System :: OS Independent
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3 :: Only
     Topic :: Software Development :: Documentation
 license = Apache-2.0
