chore: switch to GitHub actions

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,10 @@
 [tox]
-envlist = isort, black, flake8, safety, docs, py3{6,7,8}
+envlist = isort, black, flake8, mypy, safety, docs, py3{6,7,8}
 
-[travis]
-os =
-    linux: isort, black, flake8, safety, py3{6,7,8}
+[gh-actions]
 python =
-    3.6: safety, py36
-    3.7: isort, black, flake8, safety, py37
+    3.6: isort, black, flake8, safety, docs, py36
+    3.7: safety, py37
     3.8: safety, py38
 
 [testenv]
@@ -48,6 +46,13 @@ deps=
     safety
 commands=
     safety check --full-report
+
+[testenv:mypy]
+skip_install = True
+deps=
+    mypy
+commands=
+    mypy {toxinidir}/src/structurizr {toxinidir}/examples
 
 [testenv:docs]
 skip_install = True
