chore: add keyword

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ long_description = file: README.rst
 long_description_content_type = text/x-rst
 keywords =
     Structurizr
+    Structurizr-API
     C4 model
     software architecture
     diagrams-as-code
