chore: rename to stable branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,11 @@ name: CI
 on:
   push:
     branches:
-      - master
+      - stable
       - devel
   pull_request:
     branches:
-      - master
+      - stable
       - devel
 
 jobs:
