chore: upgrade isort command

--- a/tox.ini
+++ b/tox.ini
@@ -21,9 +21,9 @@ commands =
 [testenv:isort]
 skip_install = True
 deps=
-    isort
+    isort >=5.0.5
 commands=
-    isort --check-only --diff --recursive {toxinidir}/src/structurizr {toxinidir}/tests {toxinidir}/setup.py
+    isort --check-only --diff {toxinidir}/src/structurizr {toxinidir}/tests {toxinidir}/setup.py
 
 [testenv:black]
 skip_install = True
