--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,9 +32,9 @@ jobs:
     - name: Test with tox
       run: tox -- --cov-report=xml
       env:
-        STRUCTURIZR_WORKSPACE_ID: ${{ secrets.STRUCTURIZR_WORKSPACE_ID }}
-        STRUCTURIZR_API_KEY: ${{ secrets.STRUCTURIZR_API_KEY }}
-        STRUCTURIZR_API_SECRET: ${{ secrets.STRUCTURIZR_API_SECRET }}
+        SECRET_WORKSPACE_ID: ${{ secrets.STRUCTURIZR_WORKSPACE_ID }}
+        SECRET_API_KEY: ${{ secrets.STRUCTURIZR_API_KEY }}
+        SECRET_API_SECRET: ${{ secrets.STRUCTURIZR_API_SECRET }}
     - name: Report coverage
       uses: codecov/codecov-action@v1
       with:
