--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,20 @@
-name: CI
+name: CI-CD
 
 on:
   push:
     branches:
-      - stable
-      - devel
+    - stable
+    - devel
+    tags:
+    - '[0-9]+.[0-9]+.[0-9]+'
+    - '[0-9]+.[0-9]+.[0-9]+rc[0-9]+'
   pull_request:
     branches:
-      - stable
-      - devel
+    - stable
+    - devel
 
 jobs:
-  build:
+  test:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -29,8 +32,22 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools wheel
         python -m pip install tox tox-gh-actions
-    - name: Test with tox
-      run: tox -- --cov-report=xml
+    - name: Test isort
+      run: tox -e isort
+      if: ${{ matrix.python-version }} == '3.6'
+    - name: Test black
+      run: tox -e black
+      if: ${{ matrix.python-version }} == '3.6'
+    - name: Test flake8
+      run: tox -e flake8
+      if: ${{ matrix.python-version }} == '3.6'
+    - name: Test docs
+      run: tox -e docs
+      if: ${{ matrix.python-version }} == '3.6'
+    - name: Test safety
+      run: tox -e safety
+    - name: Test suite
+      run: tox -e py -- --cov-report=xml
       env:
         SECRET_WORKSPACE_ID: ${{ secrets.STRUCTURIZR_WORKSPACE_ID }}
         SECRET_API_KEY: ${{ secrets.STRUCTURIZR_API_KEY }}
@@ -39,3 +56,50 @@ jobs:
       uses: codecov/codecov-action@v1
       with:
         fail_ci_if_error: true
+
+  release:
+    needs: test
+    if: startsWith(github.ref, 'refs/tags')
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        python-version: [3.8]
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Get tag
+          id: tag
+          run: echo "::set-output name=version::${GITHUB_REF#refs/tags/}"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          python -m pip install twine
+      - name: Build package
+        run: python setup.py sdist bdist_wheel
+      - name: Check the package
+        run: twine check dist/*
+      - name: Publish to PyPI
+        env:
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        run:
+          twine upload --skip-existing --non-interactive dist/*
+      - name: Create GitHub release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          body: >
+            Please see
+            https://github.com/${{ github.repository }}/blob/${{ steps.tag.outputs.version }}/CHANGELOG.rst
+            for the full release notes.
+          draft: false
+          prerelease: false
+
