--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = isort, black, flake8, mypy, safety, docs, py3{6,7,8}
+envlist = isort, black, flake8, mypy, safety, docs, py3{6,7,8}, py
 
 [gh-actions]
 python =
