chore: skip flake8 and docs for now

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,12 +38,12 @@ jobs:
     - name: Test black
       run: tox -e black
       if: ${{ matrix.python-version }} == '3.6'
-    - name: Test flake8
-      run: tox -e flake8
-      if: ${{ matrix.python-version }} == '3.6'
-    - name: Test docs
-      run: tox -e docs
-      if: ${{ matrix.python-version }} == '3.6'
+#    - name: Test flake8
+#      run: tox -e flake8
+#      if: ${{ matrix.python-version }} == '3.6'
+#    - name: Test docs
+#      run: tox -e docs
+#      if: ${{ matrix.python-version }} == '3.6'
     - name: Test safety
       run: tox -e safety
     - name: Test suite
