--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
-envlist = isort, black, flake8, mypy, safety, docs, py3{6,7,8}, py
+envlist = isort, black, flake8, mypy, safety, docs, py3{6,7,8}
 
 [gh-actions]
 python =
-    3.6: isort, black, flake8, safety, docs, py36
-    3.7: safety, py37
-    3.8: safety, py38
+    3.6: py36
+    3.7: py37
+    3.8: py38
 
 [testenv]
 deps =
