--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ zip_safe = True
 install_requires =
     depinfo
     httpx
+    ordered-set
     pydantic
     python-dotenv
 python_requires = >=3.6
