chore: include Python 3.9 in testing

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author = Moritz E. Beber
 author_email = midnighter@posteo.net
 # Please consult https://pypi.org/classifiers/ for a full list.
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 3 - Alpha
     Environment :: Web Environment
     Intended Audience :: Developers
     Intended Audience :: Information Technology
