--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
 envlist = isort, black, flake8, mypy, safety, docs, py3{6,7,8,9}
+isolated_build = true
 
 [gh-actions]
 python =
@@ -98,7 +99,6 @@ omit =
 max-line-length = 88
 exclude =
     __init__.py
-    _version.py
 # The following conflict with `black` which is the more pedantic.
 ignore =
     E203
@@ -108,13 +108,7 @@ ignore =
 [isort]
 skip =
     __init__.py
-    _version.py
-line_length = 88
-indent = 4
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
+profile = black
 lines_after_imports = 2
 known_first_party = structurizr
 known_third_party =
