--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,9 +78,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        python -m pip install twine
+        python -m pip install twine versioneer-518
+    - name: Check PEP517 compliance
+      run: python -m pep517.check .
     - name: Build package
-      run: python setup.py sdist bdist_wheel
+      run: python -m pep517.build --source --binary .
     - name: Check the package
       run: twine check dist/*
     - name: Publish to PyPI
