--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,7 @@ where = src
 development =
     black
     isort
+    pep517
     tox
 
 [bdist_wheel]
@@ -68,5 +69,4 @@ style = pep440
 versionfile_source = src/structurizr/_version.py
 versionfile_build = structurizr/_version.py
 tag_prefix =
-parentdir_prefix = structurizr-python-
 
