fix: change version retrieval

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ zip_safe = True
 install_requires =
     depinfo
     httpx
+    importlib_metadata; python_version <'3.8'
     ordered-set
     pydantic
     python-dotenv
