--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,7 +78,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        python -m pip install twine versioneer-518
+        python -m pip install twine pep517
     - name: Check PEP517 compliance
       run: python -m pep517.check .
     - name: Build package
