chore: pin version of httx and also test for encoding of non-ascii chars in URLs

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ keywords =
 zip_safe = True
 install_requires =
     depinfo
-    httpx
+    httpx ~= 0.16
     importlib_metadata; python_version <'3.8'
     ordered-set
     pydantic
