--- a/setup.cfg
+++ b/setup.cfg
@@ -38,7 +38,7 @@ install_requires =
     httpx ~= 0.16
     importlib_metadata; python_version <'3.8'
     ordered-set
-    pydantic
+    pydantic >= 1.7.1
     python-dotenv
 python_requires = >=3.6
 tests_require =
