docs: add reference documentation for the client

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,7 +28,10 @@ plugins:
       handlers:
         python:
           rendering:
-            show_source: false
+            show_source: true
+            show_root_heading: false
+            show_root_toc_entry: true
+            show_root_full_path: false
       watch:
         - src/structurizr
 
