chore: modify test setup

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = isort, black, flake8, mypy, safety, docs, py3{6,7,8,9}
+envlist = isort, black, flake8, docs, safety, py3{6,7,8,9}
 isolated_build = true
 
 [gh-actions]
@@ -60,11 +60,8 @@ commands=
 skip_install = True
 deps=
     -r{toxinidir}/docs/requirements.txt
-whitelist_externals =
-    make
 commands=
-    make -C {toxinidir}/docs html
-    make -C {toxinidir}/docs linkcheck
+    mkdocs build --strict
 
 ################################################################################
 # Testing tools configuration                                                  #
