--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        python -m pip install tox tox-gh-actions
+        python -m pip install tox tox-gh-actions twine pep517
+    - name: Check requirements with pip
+      run: python -m pip check .
     - name: Test isort
       run: tox -e isort
       if: matrix.python-version == '3.6'
@@ -41,9 +43,9 @@ jobs:
     - name: Test flake8
       run: tox -e flake8
       if: matrix.python-version == '3.6'
-#    - name: Test docs
-#      run: tox -e docs
-#      if: matrix.python-version == '3.6'
+    - name: Test docs
+      run: tox -e docs
+      if: matrix.python-version == '3.6'
     - name: Test safety
       run: tox -e safety
     - name: Test suite
@@ -53,9 +55,14 @@ jobs:
         SECRET_API_KEY: ${{ secrets.STRUCTURIZR_API_KEY }}
         SECRET_API_SECRET: ${{ secrets.STRUCTURIZR_API_SECRET }}
     - name: Report coverage
-      uses: codecov/codecov-action@v1
-      with:
-        fail_ci_if_error: true
+      shell: bash
+      run: bash <(curl -s https://codecov.io/bash)
+    - name: Check package PEP517 compliance
+      run: python -m pep517.check .
+    - name: Build package
+      run: python -m pep517.build --source --binary .
+    - name: Check the package compliance
+      run: twine check dist/*
 
   release:
     needs: test
@@ -79,12 +86,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools wheel
         python -m pip install twine pep517
-    - name: Check PEP517 compliance
-      run: python -m pep517.check .
     - name: Build package
       run: python -m pep517.build --source --binary .
-    - name: Check the package
-      run: twine check dist/*
     - name: Publish to PyPI
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
