chore: add more project links

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,10 @@
 name = structurizr-python
 url = https://github.com/Midnighter/structurizr-python
 download_url = https://pypi.org/project/structurizr-python/
+project_urls =
+    Source Code = https://github.com/Midnighter/structurizr-python
+    Documentation = https://structurizr-python.readthedocs.io
+    Bug Tracker = https://github.com/Midnighter/structurizr-python/issues
 author = Moritz E. Beber
 author_email = midnighter@posteo.net
 # Please consult https://pypi.org/classifiers/ for a full list.
