chore: install a safe pip version

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,10 @@ python =
     3.9: py39
 
 [testenv]
+# Always download the latest pip version. This has not been released yet thus the below
+#  environment variable VIRTUALENV_PIP is needed. See
+#  https://github.com/tox-dev/tox/issues/1768#issuecomment-787075584
+download = true
 deps =
     pytest
     pytest-cov
@@ -17,6 +21,8 @@ deps =
     pytest-raises
 passenv =
     STRUCTURIZR_*
+setenv =
+    VIRTUALENV_PIP=21.1
 commands =
     pytest --cov=structurizr --cov-report=term {posargs}
 
