fix: clean up config and typing

--- a/tox.ini
+++ b/tox.ini
@@ -21,15 +21,13 @@ deps =
     pytest-raises
 passenv =
     STRUCTURIZR_*
-setenv =
-    VIRTUALENV_PIP=21.1
 commands =
     pytest --cov=structurizr --cov-report=term {posargs}
 
 [testenv:isort]
 skip_install = True
 deps=
-    isort >=5.0.5
+    isort
 commands=
     isort --check-only --diff {toxinidir}/src/structurizr {toxinidir}/tests {toxinidir}/setup.py
 
